# IsoPrep

./: LICENSE  README.md  pyproject.toml
IsoPrep/: __init__.py  config.py  logging.py  runner.py  stages.py  utils.py
IsoPrep/.ipynb_checkpoints/: logging-checkpoint.py  utils-checkpoint.py
IsoPrep/file/: barcode_10bp.txt
