[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isoprep"
version = "0.1.0"
description = "Long-read single-cell preprocessing toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Dawn"}]
dependencies = [
  "pysam",
]

[project.scripts]
isoprep = "IsoPrep.runner:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["IsoPrep*"]
